@@ -1,3 +1,8 @@
+2007-10-24  John W. Eaton  <jwe@octave.org>
+
+	* aclocal.m4 (OCTAVE_STRPTIME_BROKEN): New macro.
+	* configure.in: Use it.
+
 2007-10-23  John W. Eaton  <jwe@octave.org>
 
 	* configure.in: When checking for -lf2c, set F2CLIBS instad of
